--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 # Local .terraform directories
 **/.terraform/*
 
+**/*.vscode
+
 # .tfstate files
 *.tfstate
 *.tfstate.*
@@ -30,3 +32,4 @@ override.tf.json
 
 **/*.env
 **/*lock.hcl
+.DS_Store
